<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>knativecon2023.0trust</groupId>
	<artifactId>log4jshell-rmi-server</artifactId>
	<version>1.0</version>
	<name>log4shell-rmi-server</name>
	<packaging>jar</packaging>

	<dependencies>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>7.0.55</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jdk9+</id>
			<activation>
				<jdk>[9,)</jdk> <!-- activates for JDK 9 and above -->
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.1.0</version>
						<configuration>
							<executable>java</executable>
							<arguments>
								<argument>--add-exports</argument>
								<argument>jdk.naming.rmi/com.sun.jndi.rmi.registry=ALL-UNNAMED</argument>
								<argument>-classpath</argument>
								<classpath />.
								<argument>knativecon2023.zerotrust.RmiServer</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
        <!-- This profile is for JDK 8 -->
        <id>jdk8</id>
        <activation>
            <jdk>[1.8,1.9)</jdk>
        </activation>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.0</version>
                    <configuration>
                        <executable>java</executable>
                        <arguments>
                            <argument>-classpath</argument>
                            <classpath />.
                            <argument>knativecon2023.zerotrust.RmiServer</argument>
                        </arguments>
                    </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
	</profiles>

</project>
